--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "bracketsvis",
   "private": true,
   "dependencies": {
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "jquery": "~2.1.1"
   }
 }
